dt10/soft/outputs/f11-dut-python.stderr.txt
  File "dt10/soft/outputs/f11.py", line 2
    def geo(, n):
            ^
SyntaxError: invalid syntax
